Fix issue in displaying logo in jenkins title. Tasks were displaced with the empty icons, as unwanted icons are removed. Now tasks in place, aligned. Also minified CSS.

--- a/doony.css
+++ b/doony.css
@@ -613,10 +613,6 @@ textarea {
   border-bottom: 1px solid #ccc;
 }
 
-#.yui-skin-sam #top-panel img {
-  display: none;
-}
-
 .yui-skin-sam #search-box {
   font-size: 13px;
   padding: 5px 10px;
